# internal/controller/http/v1/users.go
@@ -18,6 +18,16 @@ func (h *Handler) initUsersRoutes(router *gin.RouterGroup) {
 	users.GET("/me", h.me)
 }
 
+// @Summary		Get users personal information
+// @Security		JWT-RS256
+// @Tags			user
+// @Description	Get users personal information
+// @Produce		json
+// @Success		200	{object}	entity.User
+// @Failure		401	{object}	errResponse{errors=[]entity.CoreError}	"Access is denied due to invalid credentials"
+// @Failure		403	{object}	errResponse{errors=[]entity.CoreError}	"Your account has been suspended"
+// @Failure		500	{object}	errResponse{errors=[]entity.CoreError}	"Internal server error"
+// @Router			/users/me [get]
 func (h *Handler) me(c *gin.Context) {
 	user := c.MustGet(userContext).(entity.User)
 
