# internal/entity/errors.go
@@ -21,9 +21,14 @@ func (e *SuspendedUserError) Error() string {
 	return fmt.Sprintf("user[id:%q] suspended", e.UserID)
 }
 
+// CoreError is a basic representation of API call error
+//
+//	@Description	Basic representation of API call error
 type CoreError struct {
-	Code    errorcode.ErrorCode `json:"code"`
-	Message string              `json:"message"`
+	// Code is CAPS_CASE constant error code you can programmatically consume to make resolution decisions from
+	Code errorcode.ErrorCode `json:"code" example:"ERROR_CODE"`
+	// Message indicate a (usually) human-readable description of the error
+	Message string `json:"message" example:"error cause description"`
 }
 
 func (e *CoreError) ErrorCode() errorcode.ErrorCode { return e.Code }
@@ -32,9 +37,13 @@ func (e *CoreError) Error() string {
 	return fmt.Sprintf("[%s]: %s", e.Code, e.Message)
 }
 
+// ValidationError is a standardized representation of a validation errors
+//
+//	@Description	Standardized representation of a validation errors
 type ValidationError struct {
 	CoreError
-	Field string `json:"field"`
+	// Field with which validation error related
+	Field string `json:"field" example:"invalid field"`
 }
 
 func (e *ValidationError) Error() string {
